[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/circle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/light.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Effects/Trail.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sounds/rebound.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/point.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/explode.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 27.0

[node name="Player" type="Area2D"]
position = Vector2( 288, 512 )
collision_mask = 15
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 3 )
texture = ExtResource( 3 )
shadow_enabled = true
shadow_gradient_length = 1.0
shadow_filter = 2
shadow_filter_smooth = 20.0

[node name="Trail" parent="." instance=ExtResource( 4 )]

[node name="TurnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="PointSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 5.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
